@@ -186,13 +186,13 @@ trait OrderAction
 
         // Use the checkout method if possible
         if ($order->getPaymentMethod() === PaymentAdapterInterface::METHOD_CHECKOUT) {
-            return $this->captureCheckout($orderId, $amount, $vatAmount, $order->getItems());
+            return $this->captureCheckout($orderId);
         }
 
         // Use the invoice method if possible
         if ($order->getPaymentMethod() === PaymentAdapterInterface::METHOD_INVOICE) {
             // @todo Should we use different credentials?
-            return $this->captureInvoice($orderId, $amount, $vatAmount, $order->getItems());
+            return $this->captureInvoice($orderId);
         }
 
         $paymentId = $order->getPaymentId();
